Add font generator
